--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Jessica do R. Fortes Mesquita - Let's Connect!</title>
 	<meta charset="utf-8">
-	<meta name="description" content="Aloha! This is my landing page. You're welcome to visit my page to read about me, some projects I am working on and have worked on, and to connect with me. Come as you are, Recruiter, Collaborator, Student, Friend">
+	<meta name="description" content="Aloha! This is my landing page. You're welcome to visit my page to read about me, some projects I am working on and have worked on, and to connect with me. Come as you are, Recruiter, Collaborator, Student or Friend">
 	<meta name="author" content="Jessica Mesquita">
 	<meta name="keywords" content="Data Science, Learning, Teaching, Mozambique, Collaborate, Lusophone, Science">
 	<script src="https://kit.fontawesome.com/6a35c731e7.js" crossorigin="anonymous"></script>
